force-app/main/default/objects/ssot__RecordActionSelectableItemExtract__dlm/fields/ssot__ActionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionId__c</fullName>
    <label>Action Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>