force-app/main/default/objects/ssot__RecordActionSelectableItemExtract__dlm/fields/ssot__DeploymentItemName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeploymentItemName__c</fullName>
    <label>Deployment Item Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeploymentItemName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>