force-app/main/default/objects/ssot__RecordActionSelectableItemExtract__dlm/fields/ssot__RecordActionDeploymentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordActionDeploymentId__c</fullName>
    <label>Record Action Deployment Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordActionDeploymentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>