force-app/main/default/objects/ssot__RecordActionSelectableItemExtract__dlm/fields/ssot__RecordActionDeploymentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordActionDeploymentType__c</fullName>
    <label>Record Action Deployment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordActionDeploymentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>